# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: flake8.yml
page_analyzer/: app.py
page_analyzer/templates/: 404.html  error.html  index.html  url.html  urls.html
page_analyzer/templates/layout/: default.html
